# granulation

./: .gitignore  .gitmodules  README.md
doc/: Doxyfile
granulator/: ADSREnvelope.cpp  ADSREnvelope.hpp  CMakeLists.txt  CustomWindowSource.cpp  CustomWindowSource.hpp  DrawingArea.cpp  DrawingArea.hpp  DummyScheduler.cpp  DummyScheduler.hpp  Envelope.cpp  Envelope.hpp  Essence.cpp  Essence.hpp  EssenceBase.cpp  EssenceBase.hpp  FileSourceData.cpp  FileSourceData.hpp  Grain.cpp  Grain.hpp  GrainDisplay.cpp  GrainDisplay.hpp  GrainDisplayView.cpp  GrainDisplayView.hpp  Granulator.cpp  Granulator.hpp  GranulatorBase.cpp  GranulatorBase.hpp  GranulatorInterface.cpp  GranulatorInterface.hpp  RandomSourceData.cpp  RandomSourceData.hpp  RandomWindowSource.cpp  RandomWindowSource.hpp  RegularSequenceStrategy.cpp  RegularSequenceStrategy.hpp  Scheduler.cpp  Scheduler.hpp  SequenceStrategy.cpp  SequenceStrategy.hpp  SinusoidalEnvelope.cpp  (+8 more)
